; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/msacm32.drv/extr_wavemap.c_WAVEMAP_drvOpen.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/msacm32.drv/extr_wavemap.c_WAVEMAP_drvOpen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.WINE_WAVEMAP = type { i32 }

@.str = private unnamed_addr constant [6 x i8] c"(%p)\0A\00", align 1
@oss = common dso_local global %struct.WINE_WAVEMAP* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @WAVEMAP_drvOpen to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @WAVEMAP_drvOpen(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = call i32 @TRACE(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i32 %4)
  %6 = load %struct.WINE_WAVEMAP*, %struct.WINE_WAVEMAP** @oss, align 8
  %7 = icmp ne %struct.WINE_WAVEMAP* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %10

9:                                                ; preds = %1
  store %struct.WINE_WAVEMAP* inttoptr (i64 1 to %struct.WINE_WAVEMAP*), %struct.WINE_WAVEMAP** @oss, align 8
  store i32 1, i32* %2, align 4
  br label %10

10:                                               ; preds = %9, %8
  %11 = load i32, i32* %2, align 4
  ret i32 %11
}

declare dso_local i32 @TRACE(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
